[gd_scene load_steps=5 format=3 uid="uid://8ui4m1udtdlf"]

[ext_resource type="Script" uid="uid://ke3syfto07yu" path="res://scripts/start_menu.gd" id="1_5v9lq"]
[ext_resource type="PackedScene" uid="uid://citrx45hw16e" path="res://scenes/ui/start_menu/level_tile_button_3d.tscn" id="2_6k0yq"]
[ext_resource type="Texture2D" uid="uid://bnrnavbcn5oya" path="res://assets/sprites/texture2D/background_image.png" id="3_bg"]
[ext_resource type="Texture2D" uid="uid://dl68gnknb4bc3" path="res://assets/sprites/texture2D/like_image.png" id="4_like"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v9lq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameArea" type="CenterContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rows" type="VBoxContainer" parent="MainLayout/GameArea"]
layout_mode = 2

[node name="RowTop" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2

[node name="Tile1" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2

[node name="Tile2" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 2

[node name="Tile3" parent="MainLayout/GameArea/Rows/RowTop" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 3

[node name="RowMiddle" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Spacer" type="Control" parent="MainLayout/GameArea/Rows/RowMiddle"]
layout_mode = 2

[node name="Tile4" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 4

[node name="Tile5" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 5

[node name="Tile6" parent="MainLayout/GameArea/Rows/RowMiddle" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 6

[node name="RowBottom" type="HBoxContainer" parent="MainLayout/GameArea/Rows"]
layout_mode = 2

[node name="Tile7" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 7

[node name="Tile8" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 8

[node name="Tile9" parent="MainLayout/GameArea/Rows/RowBottom" instance=ExtResource("2_6k0yq")]
layout_mode = 2
level_id = 9

[node name="RightPanel" type="Control" parent="MainLayout"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2

[node name="PanelBg" type="ColorRect" parent="MainLayout/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="ButtonsContainer" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="MainLayout/RightPanel/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("4_like")

[node name="AppStoreButton" type="TextureButton" parent="MainLayout/RightPanel/ButtonsContainer"]
layout_mode = 2
texture_normal = ExtResource("4_like")
